# sosc_test

./: CMakeLists.txt  README.md
rbm/: main.c  rbm.py
src/: main.c
src/data/: cube.rbm  cube2.rbm  map.xcf  player.rbm  rbm.sh  test.ply  test.txt
src/data/models/: cube.rbm  monkey.rbm
src/data/shaders/: mesh.vert  test.frag
src/data/terrains/: map.xcf
src/game/: object.h
src/koa/: etc.c  etc.h  file.c  file.h  sdl.c  sdl.h  thread.c  thread.h  time.c  time.h
src/koa/type/: list.c  list.h
src/okuu/: font.c  font.h  mesh.c  mesh.h  obb.c  obb.h  shader.c  shader.h  terrain.c  terrain.h
src/shaders/: test.frag  test.vert
